# origami-king-puzzle-solver

./: README.md  pyproject.toml
src/: Printer.py  main.py  message_queue.py  printer.py  roll.py  run.py  solve.py  solve_multiprocess.py
