[tool.poetry]
name = "mario_solver"
version = "0.1.0"
description = ""
authors = ["kentrino <kentrino@h-kento.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
line_profiler = "^3.1.0"
Cython = "^0.29.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
